--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="input-group mt-3 mb-3">
-                            <form id="for_dbsave" method="post" action="/gradesSave">
-                        <div onclick="displayInHTML()">
-                            <button id="getGrades" type="submit" class="btn btn-dark btn-block">Get Final Grades</button>
-                        </div>
-                        </form>
+                        <!-- <form id="for_dbsave" method="post" action="/gradesSave"> -->
+                            <!-- <div onclick="displayInHTML()" class="form-group"> -->
+                                <!-- <input id="getGrades" type="submit" class="btn btn-dark btn-block">Get Final
+                                Grades</input> -->
+                                <button id="getGrades" class="btn btn-dark btn-block"> Get Final Grade Average</button>
+                            <!-- </div> -->
+                        <!-- </form> -->
                     </div>
                 </div>
                 <div class="col-sm">
@@ -56,12 +58,12 @@
             </div>
         </div>
 
-        <!-- <div class="card mt-3">
-            <h5 class="card-header h5">Whole String</h5>
-            <div class="card-body">
-                <p class="card-text" id="all"></p>
+        <div class="card mt-3">
+            <h5 class="card-header h5">Test</h5>
+            <div class="grades card-body" id="displayfromDB">
+     
             </div>
-        </div> -->
+        </div>
         <div class="card mt-3 mb-3">
             <h5 class="card-header h5">Average Grades</h5>
             <div class="card-body">
@@ -69,8 +71,8 @@
             </div>
         </div>
     </div>
-    <script src="./dataProcess.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./dataProcess.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
