--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="card mt-3">
+        <div class="card mt-3" style="display: none;">
             <h5 class="card-header h5">Test</h5>
             <div class="grades card-body" id="displayfromDB">
      
